Breaking change to test framework to simplify handling of dependencies, tested against ODE
git-svn-id: https://svn.apache.org/repos/asf/incubator/buildr/trunk@615324 13f79535-47bb-0310-9956-ffa450edef68